--- a/src/pages/BuilderPage.module.css
+++ b/src/pages/BuilderPage.module.css
@@ -1,8 +1,5 @@
-.container {
-  width: 100%;
-  max-width: 770px;
-  margin: 0 auto;
-  padding: 0 20px;
+.main {
+  padding-bottom: 100px;
 }
 
 .toolBar {
