--- a/src/pages/FillPage.module.css
+++ b/src/pages/FillPage.module.css
@@ -1,20 +1,6 @@
-.container {
-  max-width: 100%;
-}
-
-.header {
-  padding: 12px 24px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 770px;
-  margin: 0 auto;
-}
-
 .main {
-  max-width: 770px;
-  margin: 0 auto;
-  padding: 0 20px;
+  padding-top: 20px;
+  padding-bottom: 100px;
 }
 
 .headerCard {
