--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,10 +1,3 @@
-.container {
-  width: 100%;
-  max-width: 770px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
 .toolBar {
   display: flex;
   justify-content: flex-end;
@@ -28,7 +21,7 @@
 }
 
 .main {
-  min-height: calc(100vh - 150px);
+  padding-bottom: 100px;
 }
 
 .templateList {
